Lots of unimportant changes

--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -26,6 +26,9 @@
                     {{#link-to "results"}}Výsledky{{/link-to}}
                 </li>
                 <li>
+                    {{#link-to "articles"}}Novinky{{/link-to}}
+                </li>
+                <li>
                     {{#link-to "forum"}}Diskuze{{/link-to}}
                 </li>
                 <li>
