--- a/app/templates/articles.hbs
+++ b/app/templates/articles.hbs
@@ -1,10 +1,10 @@
 <section id="novinky" class="container content-section" style="text-align:justify">
-
     {{#each model as |article|}}
     <div class="row" style="margin-top: 30px">
         <h1 id="name" style="color: black">{{article.title}}</h1>
     </div>
     <div class="row" style="margin-top: 30px">
+        {{{article.body}}}
     </div>
     {{/each}}
     
