--- a/app/styles/layout/header.scss
+++ b/app/styles/layout/header.scss
@@ -18,5 +18,5 @@ header .intro-text .skills {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    border-bottom: 3px solid #fbb041;
+    border-bottom: 3px solid ksi-color('primary-orange');
 }
