--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -1,5 +1,5 @@
 footer {
-    color: #fff;
+    color: ksi-color('text-light');;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -12,7 +12,7 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #2c3e50;
+    background-color: ksi-color('secondary-dark');
 }
 
 footer .footer-col {
@@ -21,5 +21,5 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #233140;
+    background-color: ksi-color('primary-dark');
 }
