drobne buggy, pridana registrace

--- a/app/styles/base/colors.scss
+++ b/app/styles/base/colors.scss
@@ -9,7 +9,7 @@ $ksi-colors: (
   'primary-dark': #233140,
   'secondary-dark': #2c3e50,
   'text-light': #ffffff,
-  'text-dark': #ffffff
+  'text-dark': #39393a
 );
 
 //
