--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -3,5 +3,6 @@
 	<div class="jumbotron" style="background-color: transparent">
 	    <h1>Výsledky</h1>
 	    <p>Rád bys je viděl, co? Smůla!</p>
+			<p>Honzo preco su pod registraciou vysledky? O.o</p>
 	</div>
 </section>
