--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -1,9 +1,11 @@
+$footer-height: 100px;
+
 footer {
     color: ksi-color('text-light');;
     bottom: 0;
     left: 0;
     width: 100%;
-    height:100px;
+    height: 'footer-height';
 }
 
 footer h3 {
