--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -36,12 +36,12 @@
                 </li>
                 <li>
                     <form action="login.html">
-                        <button class="btn btn-primary outline navbar-btn" style="margin: 10px" role="button">Přihlásit se</button>
+                        {{#link-to "login"}}<button class="btn btn-primary outline navbar-btn" style="margin: 10px" role="button">Přihlásit se</button>{{/link-to}}
                     </form>
                 </li>
                 <li>
                     <form action="registrace.html">
-                        <button class="btn btn-primary outline navbar-btn" style="margin: 10px" role="button">Registrovat se</button>
+                        {{#link-to "registration"}}<button class="btn btn-primary outline navbar-btn" style="margin: 10px" role="button">Registrovat se</button>{{/link-to}}
                     </form>
                 </li>
             </ul>
