--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,12 +1,10 @@
-<header class="ksi-header">
-    <div class="container">
-        <div class="text-center">
-            {{#link-to "assignments" type="button" class="btn btn-primary btn-lg the-button"}}
-            <h3>Začni řešit</h3>
-            {{/link-to}}
-        </div>
+<div id="ksi-photo" class="container-fluid">
+    <div class="text-center">
+        {{#link-to "assignments" type="button" class="btn btn-primary btn-lg the-button"}}
+        <h3>Začni řešit</h3>
+        {{/link-to}}
     </div>
-</header>
+</div>
 
 <!-- Page Content -->
 <section id="novinky" class="container content-section" style="text-align:justify">
