Articles now works properly

--- a/app/templates/articles.hbs
+++ b/app/templates/articles.hbs
@@ -1,12 +1,6 @@
 <section id="novinky" class="container content-section" style="text-align:justify">
-    {{#each model as |article|}}
-    <div class="row" style="margin-top: 30px">
-        <h1 id="name" style="color: black">{{article.title}}</h1>
-    </div>
-    <div class="row" style="margin-top: 30px">
-        {{{article.body}}}
-    </div>
-    {{/each}}
-    
-    <button type="button" class="btn btn-primary">Stáhni pdf</button>
+    {{articles-list model=model}}
+
+    {{#pagination-button action='previousPage' enabled=hasPreviousPage }}Přechozí{{/pagination-button}}
+    {{#pagination-button action='nextPage' enabled=hasNextPage }}Následující{{/pagination-button}}
 </section>
