--- a/app/templates/faq.hbs
+++ b/app/templates/faq.hbs
@@ -1,7 +1,37 @@
-<section id="faq" class="container content-section" style="text-align:justify">
+<section id="faq" class="container content-section">
 	<!-- Sekcia noviniek -->
 	<div class="jumbotron" style="background-color: transparent">
 	    <h1>FAQ</h1>
 	    <p id="date-text">Publikováno 4.8.2015</p>
+
+			<div class="panel panel-faq">
+			  <div class="panel-heading panel-heading-faq">Q: Som Slovák. Môžem písať riešenie v slovenčine?</div>
+			  <div class="panel-body">
+			    A: Jistě. V organizátorském týmu máme dokonce několik Slováků, takže se slovenština občas objeví i v zadání.
+			  </div>
+			</div>
+
+			<div class="panel panel-faq">
+			  <div class="panel-heading panel-heading-faq">Q: Kdo je úspěšný řešitel semináře?</div>
+			  <div class="panel-body">
+			    A: Každý, kdo dosáhne alespoň 60% celkového počtu bodů. Za každou z pěti sad lze získat 50 bodů, celkem tedy musíš získat alespoň 0.6*250 = 150 bodů.
+			  </div>
+			</div>
+
+			<div class="panel panel-faq">
+			  <div class="panel-heading panel-heading-faq">Q: Dozvěděl jsem se o semináři pozdě, první vlna už proběhla. Je možné se ještě přihlásit do semináře?</div>
+			  <div class="panel-body">
+			    A: Jistě, do semináře se můžeš přihlásit kdykoli. Pouze se snižuje tvá šance stát se úspěšným řešitelem.
+			  </div>
+			</div>
+
+			<div class="panel panel-faq">
+			  <div class="panel-heading panel-heading-faq">Q: Budu-li úspěšný řešitel KSI např. v 2. ročníku, budu po maturitě přijat na FI bez přijímaček?</div>
+			  <div class="panel-body">
+			    A: Ano, pokud jsi úspěšný řešitel semináře v kterémkoli roce a budeš se po maturitě hlásit na FI, budeš přijat.
+			  </div>
+			</div>
+			<p id="date-text">Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej <a href="mailto:ksi@fi.muni.cz">nám napsat.</a></p>
+
 	</div>
 </section>
