--- a/app/styles/components/buttons.scss
+++ b/app/styles/components/buttons.scss
@@ -60,3 +60,11 @@
 // start button
 //
 .the-button { margin-top:270px; padding-top: 5px }
+
+//
+//pager button
+//
+.btn-pager {
+  margin: 10px;
+  width: 180px;
+}
