--- a/app/styles/components/panels.scss
+++ b/app/styles/components/panels.scss
@@ -1,8 +1,8 @@
-.panel-faq {
+.panel-ksi {
   border-color: ksi-color-level('primary-orange',6);
 }
 
-.panel-faq > .panel-heading-faq {
+.panel-ksi > .panel-heading-ksi {
   background: ksi-color-level('primary-orange',9.5);
   color: ksi-color('secondary-orange');
   border-color: ksi-color-level('primary-orange',6);
