--- a/app/templates/components/articles-list.hbs
+++ b/app/templates/components/articles-list.hbs
@@ -1,6 +1,6 @@
 {{#each model as |article|}}
-  <div class="panel panel-faq" style="margin-top:30px">
-    <div class="panel-heading panel-heading-faq">
+  <div class="panel panel-ksi" style="margin-top:30px">
+    <div class="panel-heading panel-heading-ksi">
         <h3 id="name">
         	<img src="http://placehold.it/45x45">
           {{#link-to "article" article}} {{article.title}} {{/link-to}}
