--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -1,6 +1,146 @@
 <section id="profile" class="container content-section" style="text-align:justify">
-	<div class="jumbotron" style="background-color: transparent">
-	    <h1>Franta řešitel</h1>
-	    <p>Vysoký, štíhlý, se zájmem o informatiku!</p>
+	<div class="row">
+	  <div class="col-xs-5 col-md-3">
+			<div style="margin-top:30px">
+				<img src="http://placehold.it/250x250"> <!-- user image --> <!-- TODO default img -->
+			</div>
+			<div id="name" style="margin-top:30px; margin-left:5px">
+				<h3>Franta řešitel</h3>	<!-- user name -->
+			</div>
+			<div id="name">
+				<p id="profile-text">šikovný informatik, programátor, milovník stromů a acyklických grafů</p>	<!-- user profile -->
+			</div>
+			<div class="panel panel-profile" style="margin-top:30px">
+				<div class="panel-body">
+					<h6><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Masaryk University, Brno</h6> <!-- user school -->
+					<br>
+					<h6><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Česká republika</h6> <!-- user state -->
+				</div>
+			</div>
+		</div>
+	  <div class="col-xs-7 col-sm-7 col-md-9">
+			<div style="margin-top:30px">
+				<h5>Trofeje</h5>
+				<hr>
+			</div>
+
+			<div class="panel panel-profile">
+				<div class="panel-body">
+					<img src="http://placehold.it/40x40"> <!-- achievementy -->
+					<img src="http://placehold.it/40x40">
+					<img src="http://placehold.it/40x40">
+					<img src="http://placehold.it/40x40">
+					<img src="http://placehold.it/40x40">
+				</div>
+			</div>
+
+			<div style="margin-top:30px">
+				<h5>Štatistiky</h5>
+				<hr>
+			</div>
+
+			<div class="row">
+        <div class="col-sm-1">
+					<p id="profile-points-text">Skóre: </p>
+				</div>
+				<div class="col-sm-3">
+					<p id="profile-points">113</p> <!-- body -->
+				</div>
+        <div class="col-sm-1">
+					<p id="profile-points-text">Percentil: </p>
+				</div>
+				<div class="col-sm-3">
+					<p id="profile-points" style="margin-left:4px">87.7%</p> <!-- percentil -->
+				</div>
+				<div class="col-sm-1">
+					<p id="profile-points-text">Ročník: </p>
+				</div>
+				<div class="col-sm-3">
+					<p id="profile-points">2</p> <!-- rocnik -->
+				</div>
+      </div>
+
+			<div style="margin-top:30px">
+				<h5>Výsledky</h5>
+				<hr>
+			</div>
+
+			<div class="panel" style="box-shadow: none; margin-bottom: -10px;">
+				<div class="panel-body">
+					<div class="row">
+						<div class="col-sm-1"></div>
+						<div class="col-sm-5">
+							<h5>Název</h5>
+						</div>
+						<div class="col-sm-4">
+							<h5>Trofeje</h5>
+						</div>
+						<div class="col-sm-2">
+							<h5>Body</h5>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- List -->
+			<div class="panel panel-profile-assignment">
+				<div class="panel-body">
+					<div class="row">
+						<div class="col-sm-1">
+							<img src="http://placehold.it/40x40"> <!-- obrazok ulohy -->
+						</div>
+						<div class="col-sm-5">
+							<h5>První úloha</h5> <!-- nazov ulohy --> <!-- TODO odkaz na ulohu -->
+						</div>
+						<div class="col-sm-4">
+							<img src="http://placehold.it/40x40"> <!-- trofej -->
+							<img src="http://placehold.it/40x40"> <!-- trofej -->
+						</div>
+						<div class="col-sm-2">
+							<h5>10</h5> <!-- pocet bodov -->
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-profile-assignment">
+				<div class="panel-body">
+					<div class="row">
+						<div class="col-sm-1">
+							<img src="http://placehold.it/40x40"> <!-- obrazok ulohy -->
+						</div>
+						<div class="col-sm-5">
+							<h5>Druhá úloha</h5> <!-- nazov ulohy --> <!-- TODO odkaz na ulohu -->
+						</div>
+						<div class="col-sm-4">
+							<img src="http://placehold.it/40x40"> <!-- trofej -->
+						</div>
+						<div class="col-sm-2">
+							<h5>-</h5> <!-- pocet bodov -->
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-profile-assignment">
+				<div class="panel-body">
+					<div class="row">
+						<div class="col-sm-1">
+							<img src="http://placehold.it/40x40"> <!-- obrazok ulohy -->
+						</div>
+						<div class="col-sm-5">
+							<h5>Druhá úloha</h5> <!-- nazov ulohy --> <!-- TODO odkaz na ulohu -->
+						</div>
+						<div class="col-sm-4">
+
+						</div>
+						<div class="col-sm-2">
+							<h5>-</h5> <!-- pocet bodov -->
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
 	</div>
 </section>
