--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -53,7 +53,7 @@
 					<p id="profile-points" style="margin-left:4px">87.7%</p> <!-- percentil -->
 				</div>
 				<div class="col-sm-1">
-					<p id="profile-points-text">Ročník: </p>
+					<p id="profile-points-text">Ročníky: </p>
 				</div>
 				<div class="col-sm-3">
 					<p id="profile-points">2</p> <!-- rocnik -->
