logged profile header

--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -41,3 +41,9 @@ h6 {
   font-size:medium;
   color: ksi-color-level('text-dark', 5);
 }
+
+#header-text {
+  font-size:medium;
+  margin:auto;
+  color: ksi-color('text-light');
+}
