--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -34,20 +34,43 @@
                 <li>
                     {{#link-to "faq"}}FAQ{{/link-to}}
                 </li>
-                <li>
-                    <form action="login.html">
-                        {{#link-to "login"}}
-                        <button class="btn btn-primary outline navbar-btn" style="margin: 10px" role="button">Přihlásit se</button>
-                        {{/link-to}}
-                    </form>
-                </li>
-                <li>
-                    <form action="registrace.html">
-                        {{#link-to "registration"}}
-                        <button class="btn btn-primary outline navbar-btn" style="margin: 10px" role="button">Registrovat se</button>
-                        {{/link-to}}
-                    </form>
-                </li>
+                {{#if false}} <!-- TODO prerobit na if not logged -->
+                  <li>
+                      <form action="login.html">
+                          {{#link-to "login"}}
+                          <button class="btn btn-primary outline navbar-btn" style="margin: 10px" role="button">Přihlásit se</button>
+                          {{/link-to}}
+                      </form>
+                  </li>
+                  <li>
+                      <form action="registrace.html">
+                          {{#link-to "registration"}}
+                          <button class="btn btn-primary outline navbar-btn" style="margin: 10px" role="button">Registrovat se</button>
+                          {{/link-to}}
+                      </form>
+                  </li>
+                {{else}}
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                      <div style="text-align:center;">
+                        <div style="display:inline">
+                          <img src="http://placehold.it/50x50"> <!-- logged photo -->
+                        </div>
+                        <div id="header-text" style=" margin-left:10px; display:inline">
+                          Katka Šikovná <!-- logged name -->
+                        </div>
+                        <div style=" margin-left:10px; display:inline">
+                          <span class="glyphicon glyphicon-menu-down" aria-hidden="true" style="color:#fff"></span>
+                        </div>
+                      </div>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu"> <!-- TODO odkazy -->
+                      <li>{{#link-to "profile"}}Profil{{/link-to}}</li>
+                      <li>{{#link-to "settings"}}Nastavení{{/link-to}}</li>
+                      <li><a href="#">Odhlásit se</a></li>
+                    </ul>
+                  </li>
+                {{/if}}
             </ul>
         </div>
         <!-- /.navbar-collapse -->
