--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -60,6 +60,17 @@
 				</div>
       </div>
 
+			<hr>
+
+			<p id="profile-points-text">
+				Úspešný řešitel:
+			</p>
+			<div class="progress" style="margin-top:20px">
+				<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+					60%
+				</div>
+			</div>
+
 			<div style="margin-top:30px">
 				<h5>Výsledky</h5>
 				<hr>
